Issues fixed: Drop into folder highlight property when the folder is selected is not as per specs and Collapse icon is moving Forward when the folder is selected

--- a/WebContent/styles/new-ui.css
+++ b/WebContent/styles/new-ui.css
@@ -506,6 +506,7 @@ span.glyphicon.glyphicon-info-sign {
     text-overflow: ellipsis;
     width: 20em;
     cursor: pointer;
+    line-height: 1.5em;
 }
 
 .testCaptionLabel {
